# brq

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_request.md  feature_request.md  good_first_issue.md  question.md
.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml  lint.yml  python-package.yml  python-publish.yml
brq/: __init__.py  browser.py  cli.py  configs.py  consumer.py  daemon.py  decorator.py  defer_operator.py  envs.py  log.py  models.py  operator.py  producer.py  rds.py  tools.py
dev/: start-redis.sh
docker/: Dockerfile
docs/: README.md
docs/source/: conf.py  index.rst  usage.rst
drawio/: Architecture.drawio
examples/decorator/: README.md  consumer.py  producer.py
examples/defer_job/: README.md  producer.py
examples/dockerfile/: Dockerfile.consumer
examples/echo/: README.md  consumer.py  producer.py
examples/process_dead_message/: README.md  consumer.py  dead_message_consumer.py
tests/: conftest.py  test_brq.py
