[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brq"
description = "brq"
keywords = ["brq"]
requires-python = ">=3.10"
dependencies = ["pydantic", "redis>=5.0", "loguru"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
test = ["pytest", "docker", "pytest-asyncio", "pytest-cov"]
docs = ["Sphinx", "pydata-sphinx-theme", "sphinx-click", "autodoc_pydantic"]

[[project.authors]]
name = "wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/wh1isper/brq"

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "brq/__init__.py"
